parser/qingql_parser.go
// Generated from QingQL.g4 by ANTLR 4.7.

package parser // QingQL

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "','", "'('", "')'", "'\"'", "'['", "']'", "'#'", "'[]'", "'[#]'",
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
	"", "", "", "'*'", "'/'", "'%'", "'+'", "'-'", "'.'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "INSERT", "INTO", "AS", "AND",
	"CASE", "ELSE", "END", "EQ", "FROM", "GT", "GTE", "LT", "LTE", "NE", "NOT",
	"NULL", "OR", "SELECT", "THEN", "WHERE", "WHEN", "MUL", "DIV", "MOD", "ADD",
	"SUB", "DOT", "TRUE", "FALSE", "INDENTIFIER", "NUMBER", "INTEGER", "FLOAT",
	"TOPICITEM", "PATHITEM", "ARRAYITEM", "STRING", "WHITESPACE",
}

var ruleNames = []string{
	"root", "target", "fields", "field_elem", "filter", "filter_condition",
	"filter_condition_or", "filter_condition_not", "expr", "source_stmt", "sourceEntity",
	"propertyEntity", "constant", "switch_stmt", "call_expr", "asterisk", "xpath_name",
	"dotnotation", "identifierWithTOPICITEM", "identifierWithQualifier",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type QingQLParser struct {
	*antlr.BaseParser
}

func NewQingQLParser(input antlr.TokenStream) *QingQLParser {
	this := new(QingQLParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "QingQL.g4"

	return this
}

// QingQLParser tokens.
const (
	QingQLParserEOF         = antlr.TokenEOF
	QingQLParserT__0        = 1
	QingQLParserT__1        = 2
	QingQLParserT__2        = 3
	QingQLParserT__3        = 4
	QingQLParserT__4        = 5
	QingQLParserT__5        = 6
	QingQLParserT__6        = 7
	QingQLParserT__7        = 8
	QingQLParserT__8        = 9
	QingQLParserINSERT      = 10
	QingQLParserINTO        = 11
	QingQLParserAS          = 12
	QingQLParserAND         = 13
	QingQLParserCASE        = 14
	QingQLParserELSE        = 15
	QingQLParserEND         = 16
	QingQLParserEQ          = 17
	QingQLParserFROM        = 18
	QingQLParserGT          = 19
	QingQLParserGTE         = 20
	QingQLParserLT          = 21
	QingQLParserLTE         = 22
	QingQLParserNE          = 23
	QingQLParserNOT         = 24
	QingQLParserNULL        = 25
	QingQLParserOR          = 26
	QingQLParserSELECT      = 27
	QingQLParserTHEN        = 28
	QingQLParserWHERE       = 29
	QingQLParserWHEN        = 30
	QingQLParserMUL         = 31
	QingQLParserDIV         = 32
	QingQLParserMOD         = 33
	QingQLParserADD         = 34
	QingQLParserSUB         = 35
	QingQLParserDOT         = 36
	QingQLParserTRUE        = 37
	QingQLParserFALSE       = 38
	QingQLParserINDENTIFIER = 39
	QingQLParserNUMBER      = 40
	QingQLParserINTEGER     = 41
	QingQLParserFLOAT       = 42
	QingQLParserTOPICITEM   = 43
	QingQLParserPATHITEM    = 44
	QingQLParserARRAYITEM   = 45
	QingQLParserSTRING      = 46
	QingQLParserWHITESPACE  = 47
)

// QingQLParser rules.
const (
	QingQLParserRULE_root                    = 0
	QingQLParserRULE_target                  = 1
	QingQLParserRULE_fields                  = 2
	QingQLParserRULE_field_elem              = 3
	QingQLParserRULE_filter                  = 4
	QingQLParserRULE_filter_condition        = 5
	QingQLParserRULE_filter_condition_or     = 6
	QingQLParserRULE_filter_condition_not    = 7
	QingQLParserRULE_expr                    = 8
	QingQLParserRULE_source_stmt             = 9
	QingQLParserRULE_sourceEntity            = 10
	QingQLParserRULE_propertyEntity          = 11
	QingQLParserRULE_constant                = 12
	QingQLParserRULE_switch_stmt             = 13
	QingQLParserRULE_call_expr               = 14
	QingQLParserRULE_asterisk                = 15
	QingQLParserRULE_xpath_name              = 16
	QingQLParserRULE_dotnotation             = 17
	QingQLParserRULE_identifierWithTOPICITEM = 18
	QingQLParserRULE_identifierWithQualifier = 19
)

// IRootContext is an interface to support dynamic dispatch.
type IRootContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRootContext differentiates from other interfaces.
	IsRootContext()
}

type RootContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRootContext() *RootContext {
	var p = new(RootContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QingQLParserRULE_root
	return p
}

func (*RootContext) IsRootContext() {}

func NewRootContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RootContext {
	var p = new(RootContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QingQLParserRULE_root

	return p
}

func (s *RootContext) GetParser() antlr.Parser { return s.parser }

func (s *RootContext) INSERT() antlr.TerminalNode {
	return s.GetToken(QingQLParserINSERT, 0)
}

func (s *RootContext) INTO() antlr.TerminalNode {
	return s.GetToken(QingQLParserINTO, 0)
}

func (s *RootContext) Target() ITargetContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITargetContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITargetContext)
}

func (s *RootContext) SELECT() antlr.TerminalNode {
	return s.GetToken(QingQLParserSELECT, 0)
}

func (s *RootContext) Fields() IFieldsContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFieldsContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFieldsContext)
}

func (s *RootContext) EOF() antlr.TerminalNode {
	return s.GetToken(QingQLParserEOF, 0)
}

func (s *RootContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RootContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RootContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.EnterRoot(s)
	}
}

func (s *RootContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.ExitRoot(s)
	}
}

func (p *QingQLParser) Root() (localctx IRootContext) {
	localctx = NewRootContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, QingQLParserRULE_root)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(40)
		p.Match(QingQLParserINSERT)
	}
	{
		p.SetState(41)
		p.Match(QingQLParserINTO)
	}
	{
		p.SetState(42)
		p.Target()
	}
	{
		p.SetState(43)
		p.Match(QingQLParserSELECT)
	}
	{
		p.SetState(44)
		p.Fields()
	}
	{
		p.SetState(45)
		p.Match(QingQLParserEOF)
	}

	return localctx
}

// ITargetContext is an interface to support dynamic dispatch.
type ITargetContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTargetContext differentiates from other interfaces.
	IsTargetContext()
}

type TargetContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTargetContext() *TargetContext {
	var p = new(TargetContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QingQLParserRULE_target
	return p
}

func (*TargetContext) IsTargetContext() {}

func NewTargetContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TargetContext {
	var p = new(TargetContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QingQLParserRULE_target

	return p
}

func (s *TargetContext) GetParser() antlr.Parser { return s.parser }

func (s *TargetContext) INDENTIFIER() antlr.TerminalNode {
	return s.GetToken(QingQLParserINDENTIFIER, 0)
}

func (s *TargetContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TargetContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TargetContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.EnterTarget(s)
	}
}

func (s *TargetContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.ExitTarget(s)
	}
}

func (p *QingQLParser) Target() (localctx ITargetContext) {
	localctx = NewTargetContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, QingQLParserRULE_target)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(47)
		p.Match(QingQLParserINDENTIFIER)
	}

	return localctx
}

// IFieldsContext is an interface to support dynamic dispatch.
type IFieldsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFieldsContext differentiates from other interfaces.
	IsFieldsContext()
}

type FieldsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFieldsContext() *FieldsContext {
	var p = new(FieldsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QingQLParserRULE_fields
	return p
}

func (*FieldsContext) IsFieldsContext() {}

func NewFieldsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FieldsContext {
	var p = new(FieldsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QingQLParserRULE_fields

	return p
}

func (s *FieldsContext) GetParser() antlr.Parser { return s.parser }

func (s *FieldsContext) AllField_elem() []IField_elemContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IField_elemContext)(nil)).Elem())
	var tst = make([]IField_elemContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IField_elemContext)
		}
	}

	return tst
}

func (s *FieldsContext) Field_elem(i int) IField_elemContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IField_elemContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IField_elemContext)
}

func (s *FieldsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FieldsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FieldsContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.EnterFields(s)
	}
}

func (s *FieldsContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.ExitFields(s)
	}
}

func (p *QingQLParser) Fields() (localctx IFieldsContext) {
	localctx = NewFieldsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, QingQLParserRULE_fields)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(49)
		p.Field_elem()
	}
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == QingQLParserT__0 {
		{
			p.SetState(50)
			p.Match(QingQLParserT__0)
		}
		{
			p.SetState(51)
			p.Field_elem()
		}

		p.SetState(56)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IField_elemContext is an interface to support dynamic dispatch.
type IField_elemContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsField_elemContext differentiates from other interfaces.
	IsField_elemContext()
}

type Field_elemContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyField_elemContext() *Field_elemContext {
	var p = new(Field_elemContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QingQLParserRULE_field_elem
	return p
}

func (*Field_elemContext) IsField_elemContext() {}

func NewField_elemContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Field_elemContext {
	var p = new(Field_elemContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QingQLParserRULE_field_elem

	return p
}

func (s *Field_elemContext) GetParser() antlr.Parser { return s.parser }

func (s *Field_elemContext) CopyFrom(ctx *Field_elemContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *Field_elemContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Field_elemContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type SourceFieldContext struct {
	*Field_elemContext
}

func NewSourceFieldContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *SourceFieldContext {
	var p = new(SourceFieldContext)

	p.Field_elemContext = NewEmptyField_elemContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Field_elemContext))

	return p
}

func (s *SourceFieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SourceFieldContext) SourceEntity() ISourceEntityContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISourceEntityContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISourceEntityContext)
}

func (s *SourceFieldContext) Asterisk() IAsteriskContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IAsteriskContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IAsteriskContext)
}

func (s *SourceFieldContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.EnterSourceField(s)
	}
}

func (s *SourceFieldContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.ExitSourceField(s)
	}
}

type ExprFieldContext struct {
	*Field_elemContext
}

func NewExprFieldContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExprFieldContext {
	var p = new(ExprFieldContext)

	p.Field_elemContext = NewEmptyField_elemContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Field_elemContext))

	return p
}

func (s *ExprFieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExprFieldContext) Expr() IExprContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExprContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IExprContext)
}

func (s *ExprFieldContext) AS() antlr.TerminalNode {
	return s.GetToken(QingQLParserAS, 0)
}

func (s *ExprFieldContext) Xpath_name() IXpath_nameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IXpath_nameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IXpath_nameContext)
}

func (s *ExprFieldContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.EnterExprField(s)
	}
}

func (s *ExprFieldContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.ExitExprField(s)
	}
}

type XpathFieldContext struct {
	*Field_elemContext
}

func NewXpathFieldContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *XpathFieldContext {
	var p = new(XpathFieldContext)

	p.Field_elemContext = NewEmptyField_elemContext()
	p.parser = parser
	p.CopyFrom(ctx.(*Field_elemContext))

	return p
}

func (s *XpathFieldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *XpathFieldContext) Xpath_name() IXpath_nameContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IXpath_nameContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IXpath_nameContext)
}

func (s *XpathFieldContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.EnterXpathField(s)
	}
}

func (s *XpathFieldContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.ExitXpathField(s)
	}
}

func (p *QingQLParser) Field_elem() (localctx IField_elemContext) {
	localctx = NewField_elemContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, QingQLParserRULE_field_elem)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(66)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		localctx = NewExprFieldContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(57)
			p.expr(0)
		}
		{
			p.SetState(58)
			p.Match(QingQLParserAS)
		}
		{
			p.SetState(59)
			p.Xpath_name()
		}

	case 2:
		localctx = NewSourceFieldContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(61)
			p.SourceEntity()
		}
		{
			p.SetState(62)
			p.Match(QingQLParserDOT)
		}
		{
			p.SetState(63)
			p.Asterisk()
		}

	case 3:
		localctx = NewXpathFieldContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(65)
			p.Xpath_name()
		}

	}

	return localctx
}

// IFilterContext is an interface to support dynamic dispatch.
type IFilterContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFilterContext differentiates from other interfaces.
	IsFilterContext()
}

type FilterContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFilterContext() *FilterContext {
	var p = new(FilterContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QingQLParserRULE_filter
	return p
}

func (*FilterContext) IsFilterContext() {}

func NewFilterContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FilterContext {
	var p = new(FilterContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QingQLParserRULE_filter

	return p
}

func (s *FilterContext) GetParser() antlr.Parser { return s.parser }

func (s *FilterContext) Filter_condition() IFilter_conditionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFilter_conditionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFilter_conditionContext)
}

func (s *FilterContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FilterContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FilterContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.EnterFilter(s)
	}
}

func (s *FilterContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.ExitFilter(s)
	}
}

func (p *QingQLParser) Filter() (localctx IFilterContext) {
	localctx = NewFilterContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, QingQLParserRULE_filter)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(68)
		p.Filter_condition()
	}

	return localctx
}

// IFilter_conditionContext is an interface to support dynamic dispatch.
type IFilter_conditionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFilter_conditionContext differentiates from other interfaces.
	IsFilter_conditionContext()
}

type Filter_conditionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFilter_conditionContext() *Filter_conditionContext {
	var p = new(Filter_conditionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = QingQLParserRULE_filter_condition
	return p
}

func (*Filter_conditionContext) IsFilter_conditionContext() {}

func NewFilter_conditionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Filter_conditionContext {
	var p = new(Filter_conditionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = QingQLParserRULE_filter_condition

	return p
}

func (s *Filter_conditionContext) GetParser() antlr.Parser { return s.parser }

func (s *Filter_conditionContext) AllFilter_condition_or() []IFilter_condition_orContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IFilter_condition_orContext)(nil)).Elem())
	var tst = make([]IFilter_condition_orContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IFilter_condition_orContext)
		}
	}

	return tst
}

func (s *Filter_conditionContext) Filter_condition_or(i int) IFilter_condition_orContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFilter_condition_orContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IFilter_condition_orContext)
}

func (s *Filter_conditionContext) AllAND() []antlr.TerminalNode {
	return s.GetTokens(QingQLParserAND)
}

func (s *Filter_conditionContext) AND(i int) antlr.TerminalNode {
	return s.GetToken(QingQLParserAND, i)
}

func (s *Filter_conditionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Filter_conditionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Filter_conditionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.EnterFilter_condition(s)
	}
}

func (s *Filter_conditionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(QingQLListener); ok {
		listenerT.ExitFilter_condition(s)
	}
}

func (p *QingQLParser) Filter_condition() (localctx IFilter_conditionContext) {
	localctx = NewFilter_conditionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, QingQLParserRULE_filter_condition)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(70)
		p.Filter_condition_or()
	}
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == QingQLParserAND {
		{
			p.SetState(71)
			p.Match(QingQLParserAND)
		}
		{
			p.SetState(72)
			p.Filter_condition_or()
		}

		p.SetState(77)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IFilter_condition_orContext is an interface to support dynamic dispatch.
type IFilter_condition_orContext interface {
	antlr.ParserRuleContext
